[gd_scene load_steps=6 format=3 uid="uid://b7lubwtb4ys3c"]

[ext_resource type="Script" path="res://Scenes/kami_scenes/skip_button.gd" id="1_tff3u"]
[ext_resource type="Texture2D" uid="uid://bglsidl37btn1" path="res://Scenes/kami_scenes/kami_assetss/red_but_texture.png" id="2_81c0y"]

[sub_resource type="Animation" id="Animation_5cd83"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureProgressBar:tint_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.533333)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureProgressBar:value")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_hcwik"]
resource_name = "rotate"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureProgressBar:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 100.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ku3th"]
_data = {
"RESET": SubResource("Animation_5cd83"),
"rotate": SubResource("Animation_hcwik")
}

[node name="Skip" type="Button"]
offset_right = 51.0
offset_bottom = 41.0
action_mode = 0
text = "Skip"
script = ExtResource("1_tff3u")

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_right = 213.0
offset_bottom = 93.0
scale = Vector2(0.238425, 0.435847)
fill_mode = 4
texture_progress = ExtResource("2_81c0y")
tint_progress = Color(1, 1, 1, 0.533333)

[node name="Timer" type="Timer" parent="."]

[node name="rotate" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ku3th")
}

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
